added sun and moon icons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,200 @@
   </head>
   <body>
     <input type="checkbox" id="darkmode-toggle" />
-    <label for="darkmode-toggle"></label>
+    <label for="darkmode-toggle">
+      <svg
+        class="sun"
+        version="1.0"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 0 64 64"
+        enable-background="new 0 0 64 64"
+        xml:space="preserve"
+      >
+        <g>
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            
+            d="M32,14.002c-9.941,0-18,8.059-18,18s8.059,18,18,18
+		s18-8.059,18-18S41.941,14.002,32,14.002z M32,48.002c-8.837,0-16-7.164-16-16s7.163-16,16-16s16,7.164,16,16
+		S40.837,48.002,32,48.002z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M32,20.002c-0.553,0-1,0.447-1,1s0.447,1,1,1
+		c5.522,0,10,4.477,10,10c0,0.553,0.447,1,1,1s1-0.447,1-1C44,25.375,38.627,20.002,32,20.002z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M63,31H53c-0.553,0-1,0.447-1,1s0.447,1,1,1h10
+		c0.553,0,1-0.447,1-1S63.553,31,63,31z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M11.457,36.47l-3.863,1.035c-0.534,0.144-0.851,0.692-0.707,1.226
+		c0.143,0.533,0.69,0.85,1.225,0.706l3.863-1.035c0.533-0.143,0.85-0.69,0.707-1.225C12.539,36.644,11.99,36.327,11.457,36.47z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M49.32,22c0.277,0.479,0.888,0.643,1.367,0.366l8.66-5
+		c0.479-0.276,0.643-0.888,0.365-1.366c-0.275-0.479-0.887-0.642-1.365-0.365l-8.66,5C49.208,20.912,49.045,21.521,49.32,22z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M17.858,46.143c-0.39-0.391-1.023-0.389-1.414,0l-2.828,2.828
+		c-0.391,0.391-0.39,1.025,0.001,1.415c0.39,0.391,1.022,0.39,1.413-0.001l2.828-2.828C18.249,47.168,18.249,46.534,17.858,46.143z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M42,14.68c0.479,0.276,1.09,0.113,1.367-0.366l5-8.66
+		C48.644,5.175,48.48,4.563,48,4.287c-0.478-0.276-1.088-0.112-1.365,0.366l-4.999,8.661C41.358,13.793,41.522,14.403,42,14.68z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M26.824,51.318c-0.532-0.143-1.08,0.176-1.225,0.707l-1.035,3.863
+		c-0.143,0.535,0.176,1.083,0.709,1.226c0.533,0.144,1.08-0.173,1.223-0.708l1.035-3.863C27.676,52.012,27.359,51.463,26.824,51.318
+		z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M32,12c0.554,0,1.001-0.446,1.002-1V1c0-0.553-0.447-1-1.002-1
+		c-0.551,0-0.998,0.447-0.999,1l0.001,10C31.002,11.553,31.449,12,32,12z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M38.402,52.025c-0.141-0.532-0.689-0.85-1.225-0.707
+		c-0.533,0.143-0.848,0.692-0.707,1.225l1.035,3.863c0.144,0.535,0.693,0.85,1.227,0.707s0.849-0.689,0.705-1.225L38.402,52.025z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M20.637,14.312c0.275,0.479,0.887,0.643,1.363,0.367
+		c0.48-0.277,0.645-0.887,0.368-1.367l-5-8.66C17.092,4.174,16.48,4.01,16,4.287c-0.477,0.275-0.641,0.887-0.365,1.365
+		L20.637,14.312z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M47.558,46.142c-0.388-0.39-1.022-0.39-1.414,0
+		c-0.391,0.39-0.388,1.024,0,1.414l2.828,2.828c0.392,0.392,1.025,0.389,1.415-0.001c0.391-0.39,0.391-1.021-0.001-1.413
+		L47.558,46.142z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M4.654,17.365l8.662,4.999c0.477,0.276,1.088,0.113,1.363-0.364
+		c0.277-0.479,0.115-1.09-0.364-1.367l-8.661-5C5.176,15.356,4.564,15.52,4.287,16C4.013,16.477,4.176,17.089,4.654,17.365z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M52.027,38.4l3.863,1.035c0.535,0.145,1.082-0.176,1.225-0.709
+		c0.144-0.532-0.172-1.079-0.707-1.223l-3.863-1.035c-0.531-0.145-1.081,0.173-1.225,0.707C51.176,37.709,51.496,38.256,52.027,38.4
+		z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M12,32c0.001-0.554-0.445-1-0.998-1.002L1,31
+		c-0.552,0-1,0.445-1,1c0.001,0.551,0.448,1,1.001,1l10.001-0.002C11.553,32.998,12.001,32.552,12,32z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M52.545,27.529l3.863-1.035c0.535-0.143,0.85-0.693,0.706-1.227
+		c-0.142-0.531-0.688-0.848-1.224-0.705l-3.863,1.035c-0.533,0.141-0.85,0.691-0.707,1.225
+		C51.461,27.356,52.012,27.67,52.545,27.529z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M14.68,42c-0.275-0.48-0.886-0.644-1.365-0.368l-8.661,5.002
+		C4.176,46.91,4.01,47.52,4.287,48c0.277,0.477,0.889,0.641,1.367,0.365l8.66-5.002C14.791,43.088,14.957,42.479,14.68,42z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M46.144,17.856c0.389,0.392,1.022,0.388,1.414,0l2.828-2.828
+		c0.392-0.392,0.39-1.024-0.002-1.415c-0.388-0.39-1.021-0.391-1.412,0.001l-2.828,2.828C45.752,16.83,45.754,17.466,46.144,17.856z
+		"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M22,49.32c-0.479-0.277-1.088-0.113-1.365,0.364l-5,8.663
+		c-0.275,0.478-0.115,1.088,0.365,1.365c0.479,0.274,1.09,0.11,1.367-0.367l4.998-8.662C22.641,50.207,22.48,49.597,22,49.32z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M37.178,12.68c0.531,0.145,1.078-0.176,1.225-0.707l1.035-3.863
+		c0.143-0.535-0.176-1.083-0.709-1.225c-0.531-0.144-1.08,0.172-1.223,0.707l-1.035,3.863C36.324,11.986,36.645,12.536,37.178,12.68
+		z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M32,52c-0.553-0.002-0.998,0.446-1,0.998l0.002,10.004
+		C31.002,63.552,31.445,64,32,64c0.553,0,1-0.449,1.001-1l-0.003-10.002C32.998,52.447,32.555,52,32,52z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M25.6,11.973c0.139,0.533,0.691,0.85,1.225,0.707
+		c0.532-0.141,0.846-0.691,0.707-1.225l-1.035-3.863c-0.145-0.535-0.693-0.851-1.227-0.706c-0.531,0.142-0.85,0.688-0.705,1.224
+		L25.6,11.973z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M43.363,49.687c-0.275-0.478-0.883-0.644-1.363-0.365
+		c-0.479,0.274-0.641,0.885-0.367,1.364l5.004,8.661c0.275,0.478,0.883,0.644,1.363,0.366c0.479-0.277,0.642-0.889,0.367-1.367
+		L43.363,49.687z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M16.443,17.856c0.387,0.394,1.023,0.39,1.414,0
+		c0.391-0.388,0.387-1.021,0-1.414l-2.828-2.828c-0.393-0.392-1.025-0.39-1.415,0.002c-0.39,0.388-0.392,1.021,0.001,1.412
+		L16.443,17.856z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M59.348,46.633l-8.663-4.997
+		c-0.478-0.276-1.087-0.116-1.363,0.366c-0.278,0.477-0.112,1.086,0.364,1.364l8.664,4.999c0.477,0.275,1.086,0.115,1.363-0.365
+		C59.988,47.521,59.824,46.91,59.348,46.633z"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M11.974,25.599L8.11,24.563c-0.536-0.144-1.083,0.175-1.225,0.708
+		c-0.144,0.531,0.171,1.08,0.707,1.225l3.863,1.034c0.531,0.146,1.081-0.175,1.225-0.707C12.825,26.293,12.505,25.746,11.974,25.599
+		z"
+          />
+        </g>
+      </svg>
+      <svg
+        class="moon"
+        viewBox="0 0 64 64"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="m9.16 10s-.59 2-.62 2.16.21.21.46.34 1.54-1.5 1.57-1.59 1 .28 1.28.18 0-.81 0-1 1.15-1.09 1.06-1.46-1.41-.18-1.75-.25-.41-1.71-.87-1.78-.66 2-.72 2.1-1.57-.08-1.78 0-.29.4-.13.5zm-2 8.72a.89.89 0 0 0 -.25 1.37.88.88 0 0 0 1.38-.53c.15-.86-.37-1.3-1.13-.83zm32.53-12.21a1.71 1.71 0 0 0 -2.4-1.69 1.74 1.74 0 0 0 -.63 2.85 1.8 1.8 0 0 0 3.03-1.16zm-2.11-1a.92.92 0 0 1 1.3.91 1 1 0 0 1 -1.64.63.94.94 0 0 1 .34-1.5zm10 8c.34.13.37 2.06.69 2.09s1-1.31 1.15-1.4 1.69.47 2 .22-.59-1.5-.65-1.66.65-2.37.25-2.59-1.69.53-2 .56-1.3-1.88-1.64-1.73-.15 3-.34 3-1.69.5-1.6.87 1.81.55 2.16.67zm6.53 3.69a2.31 2.31 0 0 0 -1.39 3.8c1.19 1.22 3.94 1.12 4.16-1a2.52 2.52 0 0 0 -2.75-2.77zm-.58 3.07a1.26 1.26 0 0 1 .77-2 1.37 1.37 0 0 1 1.49 1.48c-.1 1.16-1.59 1.25-2.24.55zm-18.8 1.37a2 2 0 0 0 -1.23 2.56c.5 1.09 3.22 1.56 3.82-.47s-1.53-2.51-2.57-2.06zm1.79 1.89a1.29 1.29 0 0 1 -2.27.28 1.18 1.18 0 0 1 .74-1.5c.64-.24 1.9.04 1.55 1.25zm12 9.64c.29-.16-.25-2.35-.25-2.35s1.5-.75 1.57-1.06-1.88-.47-1.88-.47 0-3.06-.47-3-1.81 2.81-1.81 2.81c-.22.19-1.84.1-1.87.35s1.46.78 1.46.78-.65 1.87-.46 2.12 2.31-.84 2.31-.84 1.1 1.84 1.38 1.69zm-13.06.93c-.56.16-1.28 1.07-.69 1.75a1.24 1.24 0 0 0 2-.31 1.12 1.12 0 0 0 -1.33-1.41zm14.53 3c-2.28.6-2 3.22-.37 3.63s3.72-.34 3.31-2.13-1.93-1.73-2.93-1.47zm.06 2.9a1 1 0 0 1 .21-2c.57-.14 1.43-.15 1.65.85s-.91 1.34-1.86 1.15zm-39.58 7a1.18 1.18 0 0 0 -1.87-1 1.22 1.22 0 0 0 -.16 1.84c.56.45 2.06.16 2.03-.84zm24.07 7.1c-1.94.5-2.47 2.22-1 3.35a2.29 2.29 0 0 0 3.5-1.38 1.9 1.9 0 0 0 -2.5-1.97zm-.35 2.63c-.78-.59-.5-1.49.51-1.76a1 1 0 0 1 1.3 1.03 1.2 1.2 0 0 1 -1.81.73zm17.56-4.66a27.3 27.3 0 0 0 0-2.84c-.09-.16-.09-.16-.5 0s-1.93 2.87-2 3-2.43.06-2.59.12-.16.41-.09.66 2.18.44 2.18.44a8.27 8.27 0 0 1 -.78 1.28c-.22.18.22.47.38.59a10.81 10.81 0 0 0 2.22-.87l.43 1.06a.75.75 0 0 0 .69.09c.34-.15 0-2.09 0-2.09s1.1-.84 1.06-1.16-1-.28-1-.28zm-36.06 3.47a2.75 2.75 0 0 0 -.62-2.69 2.37 2.37 0 0 0 -2.72-.47s-1.88-2-2.6-.65.79 2.69.79 2.69a1.9 1.9 0 0 0 .46 2.34 2.88 2.88 0 0 0 2.6.37s2.37 1.6 3 .44-.91-2.03-.91-2.03zm-4.84-1.72s-.91-1.09-.53-1.56 1.56.47 1.56.47-.97 1.09-1.03 1.09zm.72 2.63c-.63-.35-.07-1.28-.07-1.28s1 1 1.32 1.21l.28.22a2.61 2.61 0 0 1 -1.53-.15zm2.59-.28a4.64 4.64 0 0 1 -2.41-2.17s1.16-1.81 2.5-.81 0 3.01-.09 2.98zm1.63 1c-.32.22-1.16-.38-1.16-.38l.44-.69c.28.19 1.03.9.72 1.1zm-2.25-3.85c-.35 0-.91.53-.91.53a2.22 2.22 0 0 1 .22.47l.56-.34.63-.38a.69.69 0 0 0 -.5-.25zm27.46-10.53c-.57.16-5.13 2.22-9.22 1s-5.35-4-5.32-6 .38-3.53.47-4.72c.05-.53-3.81-2.25-3.87-7.18s2.37-9 8.31-10.19 8.5-.13 8.94-.56.75-2.75-2.75-4.82-14.09-3.32-22.4 4.6-7.44 16.46-6.59 19.87a20.86 20.86 0 0 0 8 11.91c4.84 3.34 7.53 4.43 11.78 5.09s8.75-1.41 11.19-3.06 3-3.41 2.93-4.16-.87-1.94-1.47-1.78zm-2.92 4.94a15 15 0 0 1 -7.42 2.27 9.45 9.45 0 0 1 -5.35-1.1c-.11-.13 0-1.86-.09-2s-.73-.19-.83-.19.06 1.79 0 1.81a2.49 2.49 0 0 1 -.65-.41c-.06-.09 0-2.59-.08-2.8s-1-.23-1.08-.1a21.52 21.52 0 0 0 .23 2.79c0 .06-.48-.31-.61-.38a12.69 12.69 0 0 1 -.2-1.62 1 1 0 0 0 -.77 0c-.18.1.13 1.39.13 1.39a9.61 9.61 0 0 1 -2-1.17 24.2 24.2 0 0 1 -6-6 18.87 18.87 0 0 1 -3.36-10.22 14.81 14.81 0 0 1 2.19-8 19 19 0 0 1 4.81-6.42 25.3 25.3 0 0 1 9.21-4.66 16.74 16.74 0 0 1 9.23.14c1.81.71 3.1 2.75 2.86 2.81-.09 0-3.44-.16-5.36-.1a14.77 14.77 0 0 0 -8.86 4.23c-2.75 2.9-3.27 5.83-3.06 9.27s3.93 6.36 4 6.58-.67 3.38-.5 4.84 1.37 4.31 5.48 6.31 10.32-.29 10.46-.27.19.1.29.37-.96 1.59-2.63 2.63zm-14.36-31.54a1.73 1.73 0 0 0 2.46-1.8 1.58 1.58 0 0 0 -2.08-1.2c-1.21.43-2.02 2.43-.38 3zm.59-2.19a.76.76 0 0 1 1 .58.83.83 0 0 1 -1.18.86c-.79-.29-.4-1.25.18-1.44zm-6.88 7c1.52 1 3.61-.44 3.4-2.31s-2.59-2-3.36-1.42a2.34 2.34 0 0 0 -.04 3.73zm.57-2.89c.44-.32 1.82-.27 1.94.82a1.33 1.33 0 0 1 -2 1.34 1.36 1.36 0 0 1 .06-2.16zm-4.65 8a22.52 22.52 0 0 0 1.54-4.21c0-.39-.61-.5-.75-.37a10.5 10.5 0 0 0 -1.71 4.56c.15.41.57.28.9.01zm.94 2.67c-2.19.92-1.88 3.21-1 4.58s4.27 2.29 4.75-1.14-2.43-4.01-3.77-3.45zm3 3.25c-.34 2.4-2.7 1.76-3.32.8s-.85-2.56.68-3.21c.88-.4 2.91-.01 2.58 2.38zm2.14 5.65c-2.19.91-1.88 3.2-1 4.58s4.27 2.29 4.75-1.15-2.47-4.01-3.81-3.44zm3 3.25c-.33 2.4-2.69 1.76-3.32.8s-.85-2.57.68-3.21c.84-.4 2.88-.01 2.54 2.4zm5.33 4.95a1.26 1.26 0 0 0 0 2.4c.94.33 1.59-.35 1.61-1.25a1.14 1.14 0 0 0 -1.71-1.16zm.21 1.75a.59.59 0 0 1 0-1.12.53.53 0 0 1 .76.53c-.11.41-.42.74-.86.58z"
+        />
+      </svg>
+    </label>
     <div class="background"></div>
   </body>
 </html>
